--- a/WagGo/V/PeltVibeCasterCell.xib
+++ b/WagGo/V/PeltVibeCasterCell.xib
@@ -17,6 +17,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="170" height="224"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aHB-on-nv8">
+                        <rect key="frame" x="0.0" y="204" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="S2c-m1-WU3"/>
+                            <constraint firstAttribute="height" constant="20" id="oUZ-T2-bBc"/>
+                        </constraints>
+                    </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="igx-kQ-zsK">
                         <rect key="frame" x="0.0" y="0.0" width="170" height="224"/>
                     </imageView>
@@ -79,18 +86,44 @@
                             <action selector="revealSnoutRippleMarkWithOpacity:" destination="gTV-IL-0wX" eventType="touchUpInside" id="Lad-Qr-e4x"/>
                         </connections>
                     </button>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zAc-4w-SGZ">
+                        <rect key="frame" x="64" y="101.66666666666667" width="42" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="42" id="Cey-Yo-x8w"/>
+                            <constraint firstAttribute="height" constant="21" id="nCx-ue-XqX"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XlB-He-K6B">
+                        <rect key="frame" x="128" y="203" width="42" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="0oS-WM-JhO"/>
+                            <constraint firstAttribute="width" constant="42" id="UgN-zW-t4R"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
             <constraints>
                 <constraint firstItem="igx-kQ-zsK" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="3c3-dM-wSI"/>
                 <constraint firstItem="ldL-hP-dUA" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="4ct-Mz-ZiJ"/>
+                <constraint firstAttribute="trailing" secondItem="XlB-He-K6B" secondAttribute="trailing" id="EEo-Kh-X93"/>
                 <constraint firstAttribute="bottom" secondItem="G7b-BI-2Kw" secondAttribute="bottom" constant="12" id="IWD-tW-aeW"/>
                 <constraint firstAttribute="bottom" secondItem="igx-kQ-zsK" secondAttribute="bottom" id="Irf-Lc-s2T"/>
+                <constraint firstItem="zAc-4w-SGZ" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Nn3-9T-NcF"/>
                 <constraint firstAttribute="trailing" secondItem="igx-kQ-zsK" secondAttribute="trailing" id="Rhj-IA-gqw"/>
+                <constraint firstAttribute="bottom" secondItem="aHB-on-nv8" secondAttribute="bottom" id="Udc-Ac-vjQ"/>
                 <constraint firstItem="eqq-dw-dBI" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="7" id="Ulj-aa-LLL"/>
+                <constraint firstAttribute="bottom" secondItem="XlB-He-K6B" secondAttribute="bottom" id="aHQ-oQ-Pr3"/>
                 <constraint firstItem="Gc7-kx-llP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="6" id="aig-zp-N9i"/>
                 <constraint firstItem="eqq-dw-dBI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="6" id="fA6-tf-s2i"/>
+                <constraint firstItem="zAc-4w-SGZ" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="j8r-rJ-TzM"/>
+                <constraint firstItem="aHB-on-nv8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="m2f-ql-DCx"/>
                 <constraint firstItem="ldL-hP-dUA" firstAttribute="top" secondItem="IjA-wH-Sjr" secondAttribute="bottom" constant="6" id="mDa-yh-lua"/>
                 <constraint firstItem="igx-kQ-zsK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="oFc-TV-NEd"/>
                 <constraint firstAttribute="trailing" secondItem="Gc7-kx-llP" secondAttribute="trailing" constant="6" id="pfc-ec-5jF"/>
